openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewiq
  namespace: reviewiq
  labels:
    app: reviewiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewiq
  template:
    metadata:
      labels:
        app: reviewiq
    spec:
      containers:
        - name: reviewiq
          image: quay.io/sabhaska/reviewiq:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
